# camd-i2c-driver

./: .gitignore  CMakeLists.txt  README.md  package-lock.cmake
camd-i2c.driver/: CMakeLists.txt
camd-i2c.driver/src/: main.c
include/midi/: camddevices.h
src/: camd-i2c.c  main.c
